# rust-expt

./: README.md
add-two-numbers/: Dockerfile  add-two-numbers
add-two-numbers/src/: main.rs
async-pinning-sample-code/: Cargo.toml
basic-sycamore/: README.md  index.html
basic-sycamore/src/: lib.rs
bollarddss/: Cargo.toml
bollarddss/src/: main.rs
btreeset-sorting/: Cargo.toml
btreeset-sorting/src/: main.rs
can-you-use-map-to-add-things-to-vector/: Cargo.toml
can-you-use-map-to-add-things-to-vector/src/: lib.rs
compare-numbers/: Cargo.toml
compare-numbers/src/: main.rs
consecutive-folding/: Cargo.toml
consecutive-folding/src/: main.rs
crates-dependency/workspace-a/: Cargo.toml
duplicate-ships/: Cargo.toml
enumiteriter/: Cargo.toml
hashmap-serde-yaml/: Cargo.toml  enuminstruct.yaml  hashmap.yaml  some.yaml
json-schema/: Cargo.toml
lost-in-files/: Cargo.toml
make_my_tar/: Cargo.toml  file1.txt
mark-down/: Cargo.toml  some-html.html  some-markdown.md
natural_cmp/: Cargo.toml
regex-things/: Cargo.toml
rename-svgs/: Cargo.toml  icons.sh
rust-syncing-or-sinking/: Cargo.toml
schemars-does-not-have-a-bug/: Cargo.toml
schemars-does-not-have-a-bug/src/: lib.rs
source-category/: Cargo.toml
squeeze-my-cpu/: Cargo.toml  rust-toolchain.toml
static-type-jsonschema/: Cargo.toml  spec.json
take_filter_iterators/: Cargo.toml
timer_future/: Cargo.toml
types-and-traits/: Cargo.toml
usize-fun/: Cargo.toml
what-does-serde-do/: Cargo.toml
without-a-bundler/: Cargo.toml
without-a-bundler/src/: lib.rs
(+27 files in other folders)
